Make minor tweaks to CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -55,9 +55,9 @@ Ames, \allcaps{IA} 50011 & \url{http://gray.clhn.org}
 \section*{Education}
 
 \begin{description}[noitemsep]
-\item[2009] Ph.D. in Economics. University of California, San Diego
-\item[2006] M.S. in Statistics. University of California, San Diego
-\item[2001] B.A. in Mathematics. Tufts University
+\item[2009] PhD in Economics. University of California, San Diego
+\item[2006] MS in Statistics. University of California, San Diego
+\item[2001] BA in Mathematics. Tufts University
 \end{description}
 
 \section*{Academic Positions}
@@ -152,10 +152,10 @@ Ames, \allcaps{IA} 50011 & \url{http://gray.clhn.org}
 
 \section*{Graduate Student Advising}
 \begin{description}
-\item[2015] Matt Simpson, Ph.D. Economics and Statistics.  Co-advisor
+\item[2015] Matt Simpson, PhD Economics and Statistics.  Co-advisor
 with Jarad Niemi. \\
 Placement: Post-Doctoral Researcher in Statistics at University of Missouri.
-\item[2015] Anwen Yin, Ph.D. Economics. Co-advisor with Helle Bunzel. \\
+\item[2015] Anwen Yin, PhD Economics. Co-advisor with Helle Bunzel. \\
 Placement: Assistant Professor of Economics at Texas A\&M
 International University
 \end{description}
