Make minor change to teaching in CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -147,7 +147,7 @@ Ames, \allcaps{IA} 50011 & \url{http://gray.clhn.org}
 \item[2011 -- present] PhD Macroeconometrics
 \item[2010 -- present] Principles of Macroeconomics
 \item[2009 -- present] PhD Econometrics 1
-\item[2009] Undergraduate Econometrics 3 (at \allcaps{UCSD})
+\item[2009] Undergraduate Econometrics 3 (taught at \allcaps{UCSD})
 \end{description}
 
 \section*{Graduate Student Advising}
