Make a few more mionr changes to CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -71,25 +71,25 @@ Ames, \allcaps{IA} 50011 & \url{http://gray.clhn.org}
 \nobibliography{calhoun-ref}
 \subsection*{Refereed Journal Articles}
 
-\begin{enumerate}
+\begin{itemize}[label={}]
 \item \bibentry{calhoun:2011}
-\end{enumerate}
+\end{itemize}
 
 \subsection*{Manuscripts in Submission}
 
-\begin{enumerate}
+\begin{itemize}[label={}]
 \item \bibentry{calhoun:f}
 \item \bibentry{calhoun:d}
 \item \bibentry{calhoun:a}
 \item \bibentry{calhoun:b}
 \item \bibentry{calhoun:c}
-\end{enumerate}
+\end{itemize}
 
 \subsection*{Manuscripts in Preparation}
-\begin{enumerate}
+\begin{itemize}[label={}]
 \item \bibentry{calhoun:g}
 \item \bibentry{calhoun:e}
-\end{enumerate}
+\end{itemize}
 
 \section*{Honors and Awards}
 
