--- a/dl/calhoun-ref.bib
+++ b/dl/calhoun-ref.bib
@@ -1,6 +1,6 @@
 @Article{calhoun:2011,
-  title =        {Hypothesis testing for linear regression when $k/n$
-                  is large},
+  title =        {Hypothesis testing for linear regression when
+                  \textit{k}/\textit{n} is large},
   author =       {Gray Calhoun},
   journal =      {Journal of Econometrics},
   volume =       165,
