Tweak letterspacing in education on CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -56,8 +56,8 @@ Ames, \allcaps{IA} 50011 & \url{http://gray.clhn.org}
 
 \begin{description}[noitemsep]
 \item[2009] PhD in Economics. University of California, San Diego
-\item[2006] MS in Statistics. University of California, San Diego
-\item[2001] BA in Mathematics. Tufts University
+\item[2006] \allcaps{MS} in Statistics. University of California, San Diego
+\item[2001] \allcaps{BA} in Mathematics. Tufts University
 \end{description}
 
 \section*{Academic Positions}
