Change presentation in CV of papers

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -5,7 +5,6 @@
     amsmath,
     amssymb,
     amsthm,
-    bibentry,
     calc,
     ragged2e,
     setspace,
@@ -67,28 +66,37 @@ Ames, \allcaps{IA} 50011 & \url{http://gray.clhn.org}
 \end{description}
 
 \section*{Publications}
-\bibliographystyle{plain}
-\nobibliography{calhoun-ref}
 \subsection*{Refereed Journal Articles}
 
 \begin{itemize}[label={}]
-\item \bibentry{calhoun:2011}
+\item Hypothesis testing for linear regression when
+  \textit{k}/\textit{n} is large. \textit{Journal of Econometrics},
+  165(2):163--174, 2011
 \end{itemize}
 
 \subsection*{Manuscripts in Submission}
 
 \begin{itemize}[label={}]
-\item \bibentry{calhoun:f}
-\item \bibentry{calhoun:d}
-\item \bibentry{calhoun:a}
-\item \bibentry{calhoun:b}
-\item \bibentry{calhoun:c}
+\item A graphical analysis of causality in the Reinhart-Rogoff
+  dataset. Submitted to \textit{Contemporary Economic Policy}
+\item An asymptotically normal out-of-sample test based on mixed
+  estimation windows. Revise and resubmit at \textit{Econometrica}
+\item Improved stepdown methods for asymptotic control of generalized
+  error rates. Revise and resubmit at \textit{Journal of Econometrics}
+\item Block bootstrap consistency under weak assumptions. Iowa State
+  University Working Paper 11017. Revise and resubmit at
+  \textit{Econometric Theory}
+\item Out-of-sample comparisons of overfit models. Iowa State
+  University Working Paper 11002. Revise and resubmit at
+  \textit{Quantitative Economics}
 \end{itemize}
 
 \subsection*{Manuscripts in Preparation}
 \begin{itemize}[label={}]
-\item \bibentry{calhoun:g}
-\item \bibentry{calhoun:e}
+\item Graphing better Impulse Response Functions for discrete-time
+  linear models. Joint with Seth Pruitt
+\item A simple block bootstrap for asymptotically normal out-of-sample
+  test statistics
 \end{itemize}
 
 \section*{Honors and Awards}
