Tweak list of publications on cv

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -68,12 +68,12 @@ Dissertation title: \textit{Limit theory for overfit models}
 \section*{Publications}
 \subsection*{Refereed Journal Articles}
 
-\begin{description}
-\item[2011] Hypothesis testing for linear regression when
+\begin{itemize}
+\item Hypothesis testing for linear regression when
 \textit{k}/\textit{n} is large. \textit{Journal of Econometrics},
 165(2):163--174, 2011
-\end{description}
-  
+\end{itemize}
+
 \subsection*{Manuscripts in Submission}
 
 \begin{itemize}
