Tweak years on NSF-FEW grant

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -109,7 +109,7 @@ Dissertation title: \textit{Limit theory for overfit models}
 \section*{Grants and Fellowships}
 
 \begin{description}
-\item[2015 -- 2016:] \allcaps{NSF} 1541790, ``\allcaps{FEW}: Coupling
+\item[2015] \allcaps{NSF} 1541790, ``\allcaps{FEW}: Coupling
   Economic Models with Agronomic, Hydrologic, and Bioenergy Models for
   Sustainable Food, Energy, and Water Systems,'' Co-\allcaps{PI} with
   Cathy Kling, Raymond Arritt, and David Keiser (\$45,922)
