--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -152,10 +152,10 @@ Dissertation title: \textit{Limit theory for overfit models}
 \section*{Teaching Experience}
 
 \begin{description}[noitemsep]
-\item[2011 -- present] PhD Macroeconometrics
-\item[2010 -- present] Principles of Macroeconomics
-\item[2009 -- present] PhD Econometrics 1
-\item[2009\rlap{:}] Undergraduate Econometrics 3 (taught at \allcaps{UCSD})
+\item[2011 -- present.] PhD Macroeconometrics
+\item[2010 -- present.] Principles of Macroeconomics
+\item[2009 -- present.] PhD Econometrics 1
+\item[2009\rlap{.}] Undergraduate Econometrics 3 (taught at \allcaps{UCSD})
 \end{description}
 
 \section*{Graduate Student Advising}
@@ -186,17 +186,17 @@ International University
 \subsection*{University Committees at Iowa State}
 
 \begin{description}[noitemsep]
-\item[2014 -- present] Faculty Representative Assembly Executive
+\item[2014 -- present.] Faculty Representative Assembly Executive
 Committee
-\item[2013 -- present] Faculty Representative Assembly
+\item[2013 -- present.] Faculty Representative Assembly
 \end{description}
 \subsection*{Departmental Committees at Iowa State}
 \begin{description}[noitemsep]
-\item[2014 -- 2015] Agricultural economist hiring committee
-\item[2013 -- 2014] Environmental and resource economist hiring committee
-\item[2012 -- 2013] Computer support staff hiring committee
-\item[2009 -- 2013] Graduate Student Admissions committee
-\item[2009 -- 2014] Computer Committee
+\item[2014 -- 2015.] Agricultural economist hiring committee
+\item[2013 -- 2014.] Environmental and resource economist hiring committee
+\item[2012 -- 2013.] Computer support staff hiring committee
+\item[2009 -- 2013.] Graduate Student Admissions committee
+\item[2009 -- 2014.] Computer Committee
 \end{description}
 \subsection*{Professional Membership}
 American Economic Association, American Statistical Association,
