Make minor tweaks to cv

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -77,8 +77,6 @@ Dissertation title: \textit{Limit theory for overfit models}
 \subsection*{Manuscripts in Submission}
 
 \begin{itemize}
-\item A graphical analysis of causality in the Reinhart-Rogoff
-  dataset. Submitted to \textit{Contemporary Economic Policy}
 \item An asymptotically normal out-of-sample test based on mixed
   estimation windows. Revise and resubmit at \textit{Econometrica}
 \item Improved stepdown methods for asymptotic control of generalized
@@ -89,6 +87,8 @@ Dissertation title: \textit{Limit theory for overfit models}
 \item Out-of-sample comparisons of overfit models. Iowa State
   University Working Paper 11002. Revise and resubmit at
   \textit{Quantitative Economics}
+\item A graphical analysis of causality in the Reinhart-Rogoff
+  dataset. Submitted to \textit{Contemporary Economic Policy}
 \end{itemize}
   
 \subsection*{Manuscripts in Preparation}
@@ -150,7 +150,6 @@ Dissertation title: \textit{Limit theory for overfit models}
 \end{description}
 
 \section*{Teaching Experience}
-
 \begin{description}[noitemsep]
 \item[2011 -- present.] PhD Macroeconometrics
 \item[2010 -- present.] Principles of Macroeconomics
@@ -184,7 +183,6 @@ International University
 \textit{Manchester School}
 
 \subsection*{University Committees at Iowa State}
-
 \begin{description}[noitemsep]
 \item[2014 -- present.] Faculty Representative Assembly Executive
 Committee
@@ -192,12 +190,13 @@ Committee
 \end{description}
 \subsection*{Departmental Committees at Iowa State}
 \begin{description}[noitemsep]
-\item[2014 -- 2015.] Agricultural economist hiring committee
-\item[2013 -- 2014.] Environmental and resource economist hiring committee
-\item[2012 -- 2013.] Computer support staff hiring committee
-\item[2009 -- 2013.] Graduate Student Admissions committee
+\item[2014 -- 2015.] Agricultural Economist Hiring Committee
+\item[2013 -- 2014.] Environmental and Resource Economist Hiring Committee
+\item[2012 -- 2013.] Computer Support Staff Hiring Committee
+\item[2009 -- 2013.] Graduate Student Admissions Committee
 \item[2009 -- 2014.] Computer Committee
 \end{description}
+
 \subsection*{Professional Membership}
 American Economic Association, American Statistical Association,
 Econometric Society, Institute of Mathematical Statistics, Midwest
