Minor tweak to spacing in CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -12,6 +12,7 @@
     url,
 }
 
+\newcommand{\p}{\rlap{.}}
 \usepackage[scaled]{helvet}
 \renewcommand\familydefault{\sfdefault} 
 \usepackage[T1]{fontenc}
@@ -29,10 +30,10 @@
 \usepackage[margin=1in]{geometry}
 \usepackage[shortlabels,inline]{enumitem}
 \newlength\dwidth
-\setlength{\dwidth}{\widthof{2000\ --\ }-\labelsep}
+\setlength{\dwidth}{\widthof{2000\ --\ }-1em}
 \setenumerate{topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=0pt}
 \setitemize{topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=0pt,label={}}
-\setdescription{font=\normalfont,topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=!,labelwidth=\dwidth}
+\setdescription{font=\normalfont,topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=!,labelwidth=\dwidth,labelsep=1em}
 
 \frenchspacing
 \begin{document}
@@ -45,7 +46,7 @@
 \end{center}
 \section*{Contact Information}
 \begin{tabular}{@{}ll@{}}
-Economics Department     & (858) 361-4248 (mobile)    \\
+Economics Department     & 858 361-4248 (mobile)    \\
 Iowa State University    & \url{gcalhoun@iastate.edu} \\
 Ames, \allcaps{IA} 50011 & \url{http://gray.clhn.org}
 \end{tabular}
@@ -62,7 +63,7 @@ Dissertation title: \textit{Limit theory for overfit models}
 \section*{Academic Positions}
 
 \begin{description}
-\item[2009 -- present.] Assistant Professor of Economics, Iowa State University
+\item[2009 -- present] Assistant Professor of Economics, Iowa State University
 \end{description}
 
 \section*{Publications}
@@ -151,10 +152,10 @@ Dissertation title: \textit{Limit theory for overfit models}
 
 \section*{Teaching Experience}
 \begin{description}[noitemsep]
-\item[2011 -- present.] PhD Macroeconometrics
-\item[2010 -- present.] Principles of Macroeconomics
-\item[2009 -- present.] PhD Econometrics 1
-\item[2009\rlap{.}] Undergraduate Econometrics 3 (taught at \allcaps{UCSD})
+\item[2011 -- present] PhD Macroeconometrics
+\item[2010 -- present] Principles of Macroeconomics
+\item[2009 -- present] PhD Econometrics 1
+\item[2009] Undergraduate Econometrics 3 (taught at \allcaps{UCSD})
 \end{description}
 
 \section*{Graduate Student Advising}
@@ -184,17 +185,17 @@ International University
 
 \subsection*{University Committees at Iowa State}
 \begin{description}[noitemsep]
-\item[2014 -- present.] Faculty Representative Assembly Executive
+\item[2014 -- present] Faculty Representative Assembly Executive
 Committee
-\item[2013 -- present.] Faculty Representative Assembly
+\item[2013 -- present] Faculty Representative Assembly
 \end{description}
 \subsection*{Departmental Committees at Iowa State}
 \begin{description}[noitemsep]
-\item[2014 -- 2015.] Agricultural Economist Hiring Committee
-\item[2013 -- 2014.] Environmental and Resource Economist Hiring Committee
-\item[2012 -- 2013.] Computer Support Staff Hiring Committee
-\item[2009 -- 2013.] Graduate Student Admissions Committee
-\item[2009 -- 2014.] Computer Committee
+\item[2014 -- 2015] Agricultural Economist Hiring Committee
+\item[2013 -- 2014] Environmental and Resource Economist Hiring Committee
+\item[2012 -- 2013] Computer Support Staff Hiring Committee
+\item[2009 -- 2013] Graduate Student Admissions Committee
+\item[2009 -- 2014] Computer Committee
 \end{description}
 
 \subsection*{Professional Membership}
