--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -155,7 +155,7 @@ Dissertation title: \textit{Limit theory for overfit models}
 \item[2011 -- present] PhD Macroeconometrics
 \item[2010 -- present] Principles of Macroeconomics
 \item[2009 -- present] PhD Econometrics 1
-\item[2009] Undergraduate Econometrics 3 (taught at \allcaps{UCSD})
+\item[2009\p] Undergraduate Econometrics 3 (taught at \allcaps{UCSD})
 \end{description}
 
 \section*{Graduate Student Advising}
