Tweak spacing at top of CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -6,9 +6,8 @@
     amssymb,
     amsthm,
     calc,
+    hyperref,
     ragged2e,
-    setspace,
-    tabularx,
     url,
 }
 
@@ -39,14 +38,15 @@
 \begin{document}
 \RaggedRight
 
+
 \begin{center}
-  \allcaps{\textbf{\large Gray Calhoun}}              \\
-  Curriculum Vitae                                    \\
-  \today
+  \allcaps{\textbf{\Large Gray Calhoun}} \\
+  \vspace{\itemsep}
+  Curriculum Vitae, \today
 \end{center}
-\section*{Contact Information}
+\subsection*{Contact Information}
 \begin{tabular}{@{}ll@{}}
-Economics Department     & 858 361-4248 (mobile)    \\
+Economics Department     & 858-361-4248 (cell)    \\
 Iowa State University    & \url{gcalhoun@iastate.edu} \\
 Ames, \allcaps{IA} 50011 & \url{http://gray.clhn.org}
 \end{tabular}
