One more minor tweak to CV spacing

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -44,7 +44,7 @@
   \vspace{\itemsep}
   Curriculum Vitae, \today
 \end{center}
-\subsection*{Contact Information}
+\section*{Contact Information}
 \begin{tabular}{@{}ll@{}}
 Economics Department     & 858-361-4248 (cell)    \\
 Iowa State University    & \url{gcalhoun@iastate.edu} \\
