--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -1,49 +1,14 @@
 \documentclass[12pt]{article}%
+\author{Gray Calhoun}
+\title{Curriculum Vitae}
 
-\usepackage{%
-    amsfonts,
-    amsmath,
-    amssymb,
-    amsthm,
-    calc,
-    hyperref,
-    ragged2e,
-    url,
-}
-
-\newcommand{\p}{\rlap{.}}
 \usepackage[scaled]{helvet}
 \renewcommand\familydefault{\sfdefault} 
-\usepackage[T1]{fontenc}
-
-\usepackage[letterspace=35]{microtype}
-
-\urlstyle{same}
-\newcommand{\allcaps}[1]{\textls{\MakeUppercase{#1}}}
-
-\usepackage[tiny,raggedright]{titlesec}
-\titleformat{\section}{\bf\lsstyle\uppercase}{}{}{}{}
-\titlespacing*{\section}{0pt}{2\baselineskip}{\baselineskip}
-\titlespacing*{\subsection}{0pt}{\baselineskip}{\itemsep}
-
-\usepackage[margin=1in]{geometry}
-\usepackage[shortlabels,inline]{enumitem}
-\newlength\dwidth
-\setlength{\dwidth}{\widthof{2000\ --\ }-1em}
-\setenumerate{topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=0pt}
-\setitemize{topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=0pt,label={}}
-\setdescription{font=\normalfont,topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=!,labelwidth=\dwidth,labelsep=1em}
-
 \frenchspacing
+\input{safecv}
+
 \begin{document}
-\RaggedRight
-
-
-\begin{center}
-  \allcaps{\textbf{\Large Gray Calhoun}} \\
-  \vspace{\itemsep}
-  Curriculum Vitae, \today
-\end{center}
+\maketitle
 \section*{Contact Information}
 \begin{tabular}{@{}ll@{}}
 Economics Department     & 858-361-4248 (cell)    \\
