--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -1,7 +1,7 @@
-\documentclass[12pt]{article}%
+\documentclass[11pt]{article}%
 \author{Gray Calhoun}
 \title{Curriculum Vitae}
-\usepackage[scaled]{helvet}
+\usepackage{helvet}
 \renewcommand\familydefault{\sfdefault} 
 \frenchspacing
 
@@ -10,7 +10,6 @@
     calc,
     hyperref,
     ragged2e,
-    times, % <- default safe `professional` font.
     url,
 }
 \usepackage[T1]{fontenc}
@@ -33,11 +32,13 @@
 % proportional number spacing, you'll need to set it to tabular in
 % these labels.
 \usepackage[shortlabels,inline]{enumitem}
+\newlength\dgap
 \newlength\dwidth
-\setlength{\dwidth}{\widthof{2000\ --\ }-1em}
+\settowidth{\dgap}{\sf\,--\,}
+\settowidth{\dwidth}{\sf 2000}
 \setenumerate{topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=0pt}
 \setitemize{topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=0pt,label={}}
-\setdescription{font=\normalfont,topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=!,labelwidth=\dwidth,labelsep=1em}
+\setdescription{font=\normalfont,topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=\dwidth+\dgap,labelwidth=\dwidth,labelsep=\dgap}
 % Use `\p` to insert periods that don't take up space, e.g. `2009\p`.
 \newcommand{\p}{\rlap{.}}
 
@@ -46,7 +47,7 @@
 \makeatletter
 \def\maketitle{%
 \begin{center}%
-\par{\textls{\MakeUppercase{\textbf{\large\@author}}}}%
+\par{\textls{\MakeUppercase{\textbf{\@author}}}}%
 \vspace{\itemsep}%
 \par{\@title, \@date}%
 \end{center}%
@@ -56,6 +57,7 @@
 
 \begin{document}
 \maketitle
+
 \section*{Contact Information}
 \begin{tabular}{@{}ll@{}}
 Economics Department     & 858-361-4248 (cell)    \\
@@ -75,7 +77,7 @@ Dissertation title: \textit{Limit theory for overfit models}
 \section*{Academic Positions}
 
 \begin{description}
-\item[2009 -- present] Assistant Professor of Economics, Iowa State University
+\item[2009\,--\,present] Assistant Professor of Economics, Iowa State University
 \end{description}
 
 \section*{Publications}
@@ -164,10 +166,10 @@ Dissertation title: \textit{Limit theory for overfit models}
 
 \section*{Teaching Experience}
 \begin{description}[noitemsep]
-\item[2011 -- present] PhD Macroeconometrics
-\item[2010 -- present] Principles of Macroeconomics
-\item[2009 -- present] PhD Econometrics 1
-\item[2009\p] Undergraduate Econometrics 3 (taught at \allcaps{UCSD})
+\item[2011\,--\,present] PhD Macroeconometrics
+\item[2010\,--\,present] Principles of Macroeconomics
+\item[2009\,--\,present] PhD Econometrics 1
+\item[2009] Undergraduate Econometrics 3 (taught at \allcaps{UCSD})
 \end{description}
 
 \section*{Graduate Student Advising}
@@ -185,7 +187,7 @@ International University
 \subsection*{Journal and Handbook Referee}
 \textit{American Journal of Agricultural Economics};
 \textit{Bernoulli};
-\textit{Communications in Statistics --- Theory and Methods};
+\textit{Communications in Statistics\,---\,Theory and Methods};
 \textit{Computational Statistics and Data Analysis};
 \textit{Econometrica};
 \textit{Economics Bulletin};
@@ -197,17 +199,17 @@ International University
 
 \subsection*{University Committees at Iowa State}
 \begin{description}[noitemsep]
-\item[2014 -- present] Faculty Representative Assembly Executive
+\item[2014\,--\,present] Faculty Representative Assembly Executive
 Committee
-\item[2013 -- present] Faculty Representative Assembly
+\item[2013\,--\,present] Faculty Representative Assembly
 \end{description}
 \subsection*{Departmental Committees at Iowa State}
 \begin{description}[noitemsep]
-\item[2014 -- 2015] Agricultural Economist Hiring Committee
-\item[2013 -- 2014] Environmental and Resource Economist Hiring Committee
-\item[2012 -- 2013] Computer Support Staff Hiring Committee
-\item[2009 -- 2013] Graduate Student Admissions Committee
-\item[2009 -- 2014] Computer Committee
+\item[2014\,--\,2015] Agricultural Economist Hiring Committee
+\item[2013\,--\,2014] Environmental and Resource Economist Hiring Committee
+\item[2012\,--\,2013] Computer Support Staff Hiring Committee
+\item[2009\,--\,2013] Graduate Student Admissions Committee
+\item[2009\,--\,2014] Computer Committee
 \end{description}
 
 \subsection*{Professional Membership}
