--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -58,7 +58,7 @@
 \begin{document}
 \maketitle
 
-\section*{Contact Information}
+\section*{Contact information}
 \begin{tabular}{@{}ll@{}}
 Economics Department     & 858-361-4248 (cell)    \\
 Iowa State University    & \url{gcalhoun@iastate.edu} \\
@@ -74,14 +74,14 @@ Dissertation title: \textit{Limit theory for overfit models}
 \item[2001] \allcaps{BA} Mathematics. Tufts University
 \end{description}
 
-\section*{Academic Positions}
+\section*{Academic positions}
 
 \begin{description}
 \item[2009\,--\,present] Assistant Professor of Economics, Iowa State University
 \end{description}
 
 \section*{Publications}
-\subsection*{Refereed Journal Articles}
+\subsection*{Refereed journal articles}
 
 \begin{itemize}
 \item Hypothesis testing for linear regression when
@@ -89,7 +89,7 @@ Dissertation title: \textit{Limit theory for overfit models}
 165(2):163--174, 2011
 \end{itemize}
 
-\subsection*{Manuscripts in Submission}
+\subsection*{Manuscripts in submission}
 
 \begin{itemize}
 \item An asymptotically normal out-of-sample test based on mixed
@@ -106,7 +106,7 @@ Dissertation title: \textit{Limit theory for overfit models}
   dataset. Submitted to \textit{Contemporary Economic Policy}
 \end{itemize}
   
-\subsection*{Manuscripts in Preparation}
+\subsection*{Manuscripts in preparation}
 \begin{itemize}
 \item Graphing better Impulse Response Functions for discrete-time
   linear models (with Seth Pruitt)
@@ -114,14 +114,14 @@ Dissertation title: \textit{Limit theory for overfit models}
   test statistics
 \end{itemize}
 
-\section*{Honors and Awards}
+\section*{Honors and awards}
 
 \begin{description}
 \item[2006] Walter P. Heller Award for Outstanding Third-Year Paper,
 \allcaps{UCSD} Economics Department
 \end{description}
 
-\section*{Grants and Fellowships}
+\section*{Grants and fellowships}
 
 \begin{description}
 \item[2015] \allcaps{NSF} 1541790, ``\allcaps{FEW}: Coupling
@@ -133,20 +133,20 @@ Dissertation title: \textit{Limit theory for overfit models}
   Helle Bunzel, Jarad Niemi, and Mervyn Marasinghe (\$87,727.39)
 \end{description}
 
-\section*{External Presentations}
+\section*{External presentations}
 
-\subsection*{Invited Seminars}
+\subsection*{Invited seminars}
 
 \begin{description}
 \item[2015] University of Montreal (4/23)
 \end{description}
 
-\subsection*{Invited Conference Presentations}
+\subsection*{Invited conference presentations}
 \begin{description}
 \item[2015] \allcaps{CIREQ} Montreal Econometrics Conference (5/8)
 \end{description}
 
-\subsection*{Other Presentations}
+\subsection*{Other presentations}
 \begin{description}
 \item[2014] \allcaps{NBER} Summer Institute (Forecasting \& Empirical Methods in
   Macro \& Finance); Joint Statistical Meetings
@@ -164,7 +164,7 @@ Dissertation title: \textit{Limit theory for overfit models}
   University
 \end{description}
 
-\section*{Teaching Experience}
+\section*{Teaching experience}
 \begin{description}[noitemsep]
 \item[2011\,--\,present] PhD Macroeconometrics
 \item[2010\,--\,present] Principles of Macroeconomics
@@ -172,7 +172,7 @@ Dissertation title: \textit{Limit theory for overfit models}
 \item[2009] Undergraduate Econometrics 3 (taught at \allcaps{UCSD})
 \end{description}
 
-\section*{Graduate Student Advising}
+\section*{Graduate student advising}
 \begin{description}
 \item[2015] Matt Simpson, PhD Economics and Statistics.  Co-advisor
 with Jarad Niemi. \\
@@ -182,9 +182,9 @@ Placement: Assistant Professor of Economics at Texas A\&M
 International University
 \end{description}
 
-\section*{Professional Service}
+\section*{Professional service}
 
-\subsection*{Journal and Handbook Referee}
+\subsection*{Journal and handbook referee}
 \textit{American Journal of Agricultural Economics};
 \textit{Bernoulli};
 \textit{Communications in Statistics\,---\,Theory and Methods};
@@ -197,13 +197,13 @@ International University
 \textit{Journal of Money, Credit \& Banking};
 \textit{Manchester School}
 
-\subsection*{University Committees at Iowa State}
+\subsection*{University committees at Iowa State}
 \begin{description}[noitemsep]
 \item[2014\,--\,present] Faculty Representative Assembly Executive
 Committee
 \item[2013\,--\,present] Faculty Representative Assembly
 \end{description}
-\subsection*{Departmental Committees at Iowa State}
+\subsection*{Departmental committees at Iowa State}
 \begin{description}[noitemsep]
 \item[2014\,--\,2015] Agricultural Economist Hiring Committee
 \item[2013\,--\,2014] Environmental and Resource Economist Hiring Committee
@@ -212,7 +212,7 @@ Committee
 \item[2009\,--\,2014] Computer Committee
 \end{description}
 
-\subsection*{Professional Membership}
+\subsection*{Professional membership}
 American Economic Association, American Statistical Association,
 Econometric Society, Institute of Mathematical Statistics, Midwest
 Economics Association
