--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{article}%
+\documentclass[11pt]{article}%
 \author{Gray Calhoun}
 \title{Curriculum Vitae}
 \frenchspacing
@@ -14,7 +14,7 @@
     url,
 }
 %\usepackage[T1]{fontenc}
-\usepackage[top=.75in,left=1in,right=1in,bottom=1in]{geometry}
+\usepackage[margin=1in]{geometry}
 \usepackage[letterspace=30]{microtype}
 
 \RaggedRight
