Tweak formatting of CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -181,24 +181,24 @@ Dissertation title: \textit{Limit theory for overfit models}
 with Jarad Niemi. \\
 Placement: Post-Doctoral Researcher in Statistics at University of Missouri.
 \item[2015] Anwen Yin, PhD Economics. Co-advisor with Helle Bunzel. \\
-Placement: Assistant Professor of Economics at Texas A\&M
+Placement: Assistant Professor of Economics at Texas \textls{A\&M}
 International University
 \end{description}
 
 \section*{Professional service}
 
 \subsection*{Journal and handbook referee}
-\textit{American Journal of Agricultural Economics};
-\textit{Bernoulli};
-\textit{Communications in Statistics\,---\,Theory and Methods};
-\textit{Computational Statistics and Data Analysis};
-\textit{Econometrica};
-\textit{Economics Bulletin};
-\textit{Handbook of Economic Forecasting, volume 2};
-\textit{International Journal of Forecasting};
-\textit{Journal of Business \& Economic Statistics};
-\textit{Journal of Money, Credit \& Banking};
-\textit{Manchester School}
+\textit{American Journal of Agricultural Economics;
+Bernoulli;
+Communications in Statistics\,---\,Theory and Methods;
+Computational Statistics and Data Analysis;
+Econometrica;
+Economics Bulletin;
+Handbook of Economic Forecasting, volume 2;
+International Journal of Forecasting;
+Journal of Business \& Economic Statistics;
+Journal of Money, Credit \& Banking;
+Manchester School}
 
 \subsection*{University committees at Iowa State}
 \begin{description}[noitemsep]
