Add office phone number to CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -68,10 +68,11 @@
 \maketitle
 
 \section*{Contact information}
-\begin{tabular}{@{}ll@{}}
-Economics Department     & 858-361-4248 (cell)    \\
-Iowa State University    & \url{gcalhoun@iastate.edu} \\
-Ames, \allcaps{IA} 50011 & \url{http://gray.clhn.org}
+\begin{tabular}{@{}lrl@{}}
+  467 Heady Hall           & {Website:} & \url{http://gray.clhn.org} \\
+  Economics Department     & {Email:}   & \url{gcalhoun@iastate.edu} \\
+  Iowa State University    & {Office:}  & 515-294-6271               \\
+  Ames, \allcaps{IA} 50011 & {Cell:}    & 858-361-4248
 \end{tabular}
 
 \section*{Education}
