Add grad student committees to CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -115,7 +115,7 @@ Dissertation title: \textit{Limit theory for overfit models}
 \item A graphical analysis of causality in the Reinhart-Rogoff
   dataset. Submitted to \textit{Contemporary Economic Policy}
 \end{itemize}
-  
+
 \subsection*{Manuscripts in preparation}
 \begin{itemize}
 \item Graphing better Impulse Response Functions for discrete-time
@@ -175,14 +175,8 @@ Dissertation title: \textit{Limit theory for overfit models}
 \end{description}
 
 \section*{Teaching experience}
-\begin{description}[noitemsep]
-\item[2011\,--\,present] PhD Macroeconometrics
-\item[2010\,--\,present] Principles of Macroeconomics
-\item[2009\,--\,present] PhD Econometrics 1
-\item[2009\p] Undergraduate Econometrics 3 (taught at \allcaps{UCSD})
-\end{description}
 
-\section*{Graduate student advising}
+\subsection*{Graduate student advisor, listed with year of graduation}
 \begin{description}
 \item[2015] Matt Simpson, PhD Economics and Statistics.  Co-advisor
 with Jarad Niemi. \\
@@ -190,6 +184,34 @@ Placement: Post-Doctoral Researcher in Statistics at University of Missouri.
 \item[2015] Anwen Yin, PhD Economics. Co-advisor with Helle Bunzel. \\
 Placement: Assistant Professor of Economics at Texas \textls{A\&M}
 International University
+\end{description}
+
+\subsection*{Graduate student committee member, listed with year of graduation}
+
+\begin{description}
+\item[Current students:]
+Samantha Tyner, PhD Statistics;
+Carson Sievert, PhD Statistics;
+Yang He, PhD Economics;
+Ziran Li, PhD Economics;
+Soumnyadip Roy, PhD Economics;
+Zabid Iqbal, PhD Economics
+\item[2015] Xiying Liu, PhD Economics;
+Jessica Short, MS Statistics;
+Matthew Clancy, PhD Economics;
+Sam Helmich, MS Statistics;
+Deung-Yong Heo, PhD Economics;
+\item[2013] Yihui Xie, PhD Statistics; Nathan Zimmerman, MS Statistics
+\item[2012] Jeremiah Richey, PhD Economics
+\item[2010] Ozgu Serttas, PhD Economics
+\end{description}
+
+\subsection*{Courses taught}
+\begin{description}[noitemsep]
+\item[2011\,--\,present] PhD Macroeconometrics
+\item[2010\,--\,present] Principles of Macroeconomics
+\item[2009\,--\,present] PhD Econometrics 1
+\item[2009\p] Undergraduate Econometrics 3 (taught at \allcaps{UCSD})
 \end{description}
 
 \section*{Professional service}
