--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -200,7 +200,7 @@ Zabid Iqbal, PhD Economics
 Jessica Short, MS Statistics;
 Matthew Clancy, PhD Economics;
 Sam Helmich, MS Statistics;
-Deung-Yong Heo, PhD Economics;
+Deung-Yong Heo, PhD Economics
 \item[2013] Yihui Xie, PhD Statistics; Nathan Zimmerman, MS Statistics
 \item[2012] Jeremiah Richey, PhD Economics
 \item[2010] Ozgu Serttas, PhD Economics
