Remove dates of presentations from CV
When I look up dates for all of the presentations I'll put them back,
but right now some are dated and some are not.

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -68,11 +68,11 @@
 \maketitle
 
 \section*{Contact information}
-\begin{tabular}{@{}lrl@{}}
-  467 Heady Hall           & {Website:} & \url{http://gray.clhn.org} \\
-  Economics Department     & {Email:}   & \url{gcalhoun@iastate.edu} \\
-  Iowa State University    & {Office:}  & 515-294-6271               \\
-  Ames, \allcaps{IA} 50011 & {Cell:}    & 858-361-4248
+\begin{tabular}{@{}rll@{}}
+ {Email:}   & \url{gcalhoun@iastate.edu} & 467 Heady Hall        \\
+ {Website:} & \url{http://gray.clhn.org} & Economics Department  \\
+ {Mobile:}  & 858-361-4248               & Iowa State University \\
+ {Office:}  & 515-294-6271               & Ames, \allcaps{IA} 50011
 \end{tabular}
 
 \section*{Education}
@@ -148,12 +148,12 @@ Dissertation title: \textit{Limit theory for overfit models}
 \subsection*{Invited seminars}
 
 \begin{description}
-\item[2015] University of Montreal (4/23)
+\item[2015] University of Montreal %(4/23)
 \end{description}
 
 \subsection*{Invited conference presentations}
 \begin{description}
-\item[2015] \allcaps{CIREQ} Montreal Econometrics Conference (5/8)
+\item[2015] \allcaps{CIREQ} Montreal Econometrics Conference %(5/8)
 \end{description}
 
 \subsection*{Other presentations}
@@ -176,7 +176,7 @@ Dissertation title: \textit{Limit theory for overfit models}
 
 \section*{Teaching experience}
 
-\subsection*{Graduate student advisor, listed with year of graduation}
+\subsection*{Graduate student advisor, students listed with year of graduation}
 \begin{description}
 \item[2015] Matt Simpson, PhD Economics and Statistics.  Co-advisor
 with Jarad Niemi. \\
@@ -186,7 +186,7 @@ Placement: Assistant Professor of Economics at Texas \textls{A\&M}
 International University
 \end{description}
 
-\subsection*{Graduate student committee member, listed with year of graduation}
+\subsection*{Graduate student committee member, students listed with year of graduation}
 
 \begin{description}
 \item[Current students:]
