Tweak contact information display on CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -68,11 +68,11 @@
 \maketitle
 
 \section*{Contact information}
-\begin{tabular}{@{}rll@{}}
- {Email:}   & \url{gcalhoun@iastate.edu} & 467 Heady Hall        \\
- {Website:} & \url{http://gray.clhn.org} & Economics Department  \\
- {Mobile:}  & 858-361-4248               & Iowa State University \\
- {Office:}  & 515-294-6271               & Ames, \allcaps{IA} 50011
+\begin{tabular}{@{}lrl@{}}
+ 467 Heady Hall            & {Office:}  & 515-294-6271              \\
+ Economics Department      & {Mobile:}  & 858-361-4248              \\
+ Iowa State University     & {Email:}   & \url{gcalhoun@iastate.edu}\\
+ Ames, \allcaps{IA} 50011  & {Website:} & \url{http://gray.clhn.org}
 \end{tabular}
 
 \section*{Education}
