--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{article}%
+\documentclass[12pt]{article}%
 \author{Gray Calhoun}
 \title{Curriculum Vitae}
 \frenchspacing
@@ -31,8 +31,8 @@
 % Set spacing and size of sections and subsections. (Don't use
 % anything below subsection.)
 \usepackage[tiny,raggedright]{titlesec}
-\titleformat{\section}{\bf\lsstyle\small\uppercase}{}{}{}{}
-\titleformat{\subsection}{\bf\small}{}{}{}{}
+\titleformat{\section}{\bf\lsstyle\uppercase}{}{}{}{}
+\titleformat{\subsection}{\bf}{}{}{}{}
 \titlespacing*{\section}{0pt}{2\baselineskip}{\baselineskip}
 \titlespacing*{\subsection}{0pt}{\baselineskip}{\itemsep}
 
@@ -41,13 +41,14 @@
 % proportional number spacing, you'll need to set it to tabular in
 % these labels.
 \usepackage[shortlabels,inline]{enumitem}
+\newcommand{\dfont}{\normalfont}
 \newlength\dgap
 \newlength\dwidth
-\settowidth{\dgap}{\sf\,--\,}
-\settowidth{\dwidth}{\sf 2000}
+\settowidth{\dgap}{\dfont \,--\,}
+\settowidth{\dwidth}{\dfont 2000}
 \setenumerate{topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=0pt}
 \setitemize{topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=0pt,label={}}
-\setdescription{font=\normalfont,topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=\dwidth+\dgap,labelwidth=\dwidth,labelsep=\dgap}
+\setdescription{font=\dfont,topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=\dwidth+\dgap,labelwidth=\dwidth,labelsep=\dgap}
 % Use `\p` to insert periods that don't take up space, e.g. `2009\p`.
 \newcommand{\p}{\rlap{.}}
 
