Tweak contact info formatting on CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -70,10 +70,10 @@
 
 \section*{Contact information}
 \begin{tabular}{@{}lrl@{}}
- 467 Heady Hall            & {Office:}  & 515-294-6271              \\
- Economics Department      & {Mobile:}  & 858-361-4248              \\
- Iowa State University     & {Email:}   & \url{gcalhoun@iastate.edu}\\
- Ames, \allcaps{IA} 50011  & {Website:} & \url{http://gray.clhn.org}
+ 467 Heady Hall            & Office  & 515-294-6271              \\
+ Economics Department      & Mobile  & 858-361-4248              \\
+ Iowa State University     & Email   & \url{gcalhoun@iastate.edu}\\
+ Ames, \allcaps{IA} 50011  & Website & \url{http://gray.clhn.org}
 \end{tabular}
 
 \section*{Education}
