Add departments to 'external presentations'

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -149,7 +149,7 @@ Dissertation title: \textit{Limit theory for overfit models}
 \subsection*{Invited seminars}
 
 \begin{description}
-\item[2015] University of Montreal %(4/23)
+\item[2015] University of Montreal Economics Department %(4/23)
 \end{description}
 
 \subsection*{Invited conference presentations}
@@ -171,8 +171,8 @@ Dissertation title: \textit{Limit theory for overfit models}
   Statistical Meetings; International Symposium on Forecasting;
   Midwest Economics Association Annual Meetings
 \item[2009] Federal Deposit Insurance Corporation; Iowa State
-  University; Federal Reserve Bank of Kansas City; Wayne State
-  University
+  University Economics Department; Federal Reserve Bank of Kansas City;
+  Wayne State University Economics Department
 \end{description}
 
 \section*{Teaching experience}
